Создано с помощью Colaboratory

--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNhKClBm+B6LQnUqdbz8P5N",
+      "authorship_tag": "ABX9TyNkpmNGyugl0Lg8AUw2EJaI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,6 +37,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Соедините два словаря в один. dict1 = {'One': 1, 'Two': 2, 'Three': 3} dict2 = {'Four': 4, 'Five': 5, 'Six': 6}"
+      ],
+      "metadata": {
+        "id": "RWHlopErSk6J"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "dict1 = {'One': 1, 'Two': 2, 'Three': 3}\n",
@@ -64,18 +73,20 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "d_012CAJGKtV"
-      }
-    },
-    {
-      "cell_type": "markdown",
       "source": [
         "###Задание 2"
       ],
       "metadata": {
         "id": "jEaUWwIfJHMw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Напишите функцию, которая на вход принимает два словаря и возвращает один объединенный словарь. Используйте аннотирование типов."
+      ],
+      "metadata": {
+        "id": "NK67cWH_Sqvu"
       }
     },
     {
